--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,15 @@
         android:theme="@style/Theme.Mad2"
         tools:targetApi="31">
         <activity
+            android:name=".home"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:exported="false"
+            android:label="@string/title_activity_home"
+            android:theme="@style/Theme.Mad2.Fullscreen" />
+        <activity
+            android:name=".saved"
+            android:exported="false" />
+        <activity
             android:name=".profile"
             android:exported="false" />
         <activity
