--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.Mad2"
         tools:targetApi="31">
         <activity
+            android:name=".recipieInfo"
+            android:exported="false" />
+        <activity
             android:name=".home"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:exported="false"
