--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,10 +13,13 @@
         android:theme="@style/Theme.Mad2"
         tools:targetApi="31">
         <activity
-            android:name=".recipieInfo"
+            android:name=".AIrecipeGen"
             android:exported="false" />
         <activity
             android:name=".home"
+            android:exported="false" />
+        <activity
+            android:name=".recipe_info"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:exported="false"
             android:label="@string/title_activity_home"
